2003-05-05  Michael Hanni   <michael@deviant-behavior.com>

	* Source/NSTabView.m: implemented 
	selectTabViewItemWithIdentifier:.

2003-05-05 22:48  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager.h, Source/GSLayoutManager.m,
	Source/GSHorizontalTypesetter.m: Detect and handle gaps in the soft
	invalidated layout information.

2003-05-02  Adam Fedor  <fedor@gnu.org>

	* Documentation/Gui/GNUmakefile: Remove GNUSTEP_MAKEFILES.
	* Source/DocMakefile: Idem.

2003-05-02  Fred Kiefer <FredKiefer@gmx.de>

	* TextConverters/RTF/RTFProducer.h
	* TextConverters/RTF/RTFProducer.m
	New implemtation by Axel "Mikesch" Katerbau (axel@objectpark.org)
	with small changes from me. RTF output now support much more
	attributes and even Unicode characters. 
	* Source/NSBezierPath.m
	Moved code from [bezierPathWithOvalInRect:] and
	[bezierPathWithRect:] to [appendBezierPathWithOvalInRect:] and 
	[appendBezierPathWithRect:] and implemented the former with a call
	to the later.
	Preliminary implemetation for [appendBezierPathWithGlyph:inFont:]
	and [appendBezierPathWithGlyphs:count:inFont:]. 
	* Source/NSFont.m:
	Preliminary implemetation for NSConvertGlyphsToPackedGlyphs().
	
2003-05-01 21:48  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSScroller.m (-acceptsFirstResponder): Implement to
	return NO.

2003-05-01 20:02  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSInputManager.m (-loadBindingsWithName:): Update for file
	system layout changes.

	* Source/NSTextView.m (-drawRect:): Draw the background correctly.

2003-04-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSScrollView.m: ([scrollWheel:]) enable horizontal scrolling
	with shift key.

2003-04-28 18:35  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/NSTextContainer.h: Documented.
	* Source/NSTextContainer.m: Cleanups.

Mon Apr 28 13:14:15 2003  Nicola Pero  <n.pero@mi.flashnet.it>
