@@ -85,6 +85,7 @@ common_retH.tiff \
 common_WMClose.tiff \
 common_WMCloseBroken.tiff \
 common_Unknown.tiff \
+common_UnknownApplication.tiff \
 common_Folder.tiff \
 common_Root_PC.tiff \
 common_Root_SGI.tiff \
